objects/Need__c.object
<CustomObject>
    <description>According to the business requirement  we created the  need object separately to make look up from needs to contact roles a required field. When user create a new need record on a contact role it should pre populate the relation to contact role.User do not need to fill the contact role lookup manually.    It should be automatic  restricting user to create more then 6 need for a contact role.</description>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Custom_Opportunity_Contact_Role__c</referenceTo>
        <relationshipLabel>Needs</relationshipLabel>
        <relationshipName>Need</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_Status__c</fullName>
        <label>Need Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expressed</fullName>
                </value>
                <value>
                    <fullName>To be Developed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Type__c</fullName>
        <label>Need Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implied</fullName>
                </value>
                <value>
                    <fullName>Explicit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Need</label>
    <nameField>
        <displayFormat>Need-{00000000}</displayFormat>
        <label>Need Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Need</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>